--- a/journey.html
+++ b/journey.html
@@ -3,108 +3,52 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--- PAGE HEADER TITLE DISPLAYED----------------------------------------------------------->
     <title>Emily Heyrman's Journey</title>
     <!--- FONT ------------------------------------------------------------------------->
-    <link href='//fonts.googleapis.com/css?family=Montserrat:thin,extra-light,light,100,200,300,400,500,600,700,800'
+    <link href='//fonts.googleapis.com/css?family=Montserrat:thin,extra-light,light,100,900'
       rel='stylesheet' type='text/css'>
-    <link href='//fonts.googleapis.com/css?family=Source Sans Pro:thin,extra-light,light,100,200,300,400,500,600,700,800'
+    <link href='//fonts.googleapis.com/css?family=Source Sans Pro:thin,extra-light,light,100,900'
       rel='stylesheet' type='text/css'>
-    <link href='//fonts.googleapis.com/css?family=Raleway:thin,extra-light,light,100,200,300,400,500,600,700,800'
+    <link href='//fonts.googleapis.com/css?family=Raleway:thin,extra-light,light,100,900'
       rel='stylesheet' type='text/css'>
     <!-- Font Awesome -->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <!-- Custom Styles -->
       <link rel="stylesheet" href="styles/reset.css">
       <link rel="stylesheet" href="styles/main.css">
-      <link rel="stylesheet" href="styles/flex.css">
-      <!--- JQUERY ------------------------------------------------------------------------------->
-      		<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-      		<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-
-      		<script type='text/javascript' src="js/mobile_menu.js"></script>
-
-      <!---Lato and Bad Script Font courtesy of Google Fonts at fonts.google.com ----------------->
-      		<link href="https://fonts.googleapis.com/css?family=Bad+Script" rel="stylesheet">
-      		<link href="https://fonts.googleapis.com/css?family=Lato:300,400,900" rel="stylesheet">
-      		<script>
-
-      					  /* Following script courtesy of jQuery UI documentation of toggle effect*/
-
-      					  //Toggle mobile menu visability
-      					  $( function() {
-      						  $('#mobile-nav-container').removeClass('hidden');
-
-      						  $( "#menu-button" ).on( "click", function() {
-      								runEffect("#mobile-nav-container");
-      						  });
-
-      					  } );
-
-      					  $( function() {
-      						  $( "#menu-button" ).on( "click", function() {
-      								runEffect("#menu-icon");
-      						  });
-
-      					  } );
-
-      					  $( function() {
-      						  $('#close-icon').removeClass('hidden');
-
-      						  $( "#menu-button" ).on( "click", function() {
-      								runEffect("#close-icon");
-      						  });
-
-      					  } );
-
-      					  var isVisible = false;
-      						$(window).scroll(function(){
-      						     var shouldBeVisible = $(window).scrollTop()>200;
-      						     if (shouldBeVisible && !isVisible) {
-      						          isVisible = true;
-      						          $('#back-to-top').show();
-      						     } else if (isVisible && !shouldBeVisible) {
-      						          isVisible = false;
-      						          $('#back-to-top').hide();
-      						    }
-      						});
-      		</script>
-  </head>
   <!--- BODY START --------------------------------------------------------------------------->
     <body>
-  <!--MOBILE HEADER START--------------------------------------------------------------------->
-  <article class='light'>
-  <header>
-    <div id='mobile-header'>
-      <div id='mobile-header-img-container'>
-        <div id='menu-button-container'>
-          <a href='#!' id='menu-button'>
-            <img id='menu-icon' src='images/menu-icon.png' alt='' />
-            <img id='close-icon' src='images/cancel.png' alt='' />
-            <div class='clear'></div>
-          </a>
-        </div>
-      </div>
-        <div class='clear'></div>
-      <div id='mobile-nav-container'>
-          <nav id='mobile-nav'>
-            <ul>
-              <li><a href='index.html'>Home</a></li>
-              <li><a href='#Journey'>About</a></li>
-              <li><a href='#Contact'>Contact</a></li>
-            </ul>
-          </nav>
-      </div>
-      <div class='scroll-down'>
-        <img src='img/icons/scroll-down.png' alt='Back to Top Icon' / >
-      </div>
-    </div>
-  </header>
   <!--- GRID CONTAINER------------------------------------------------------------------------>
        <div class="container-journey">
+         <!--MOBILE HEADER START--------------------------------------------------------------------->
+         <header class="header">
+           <input class="menu-btn" type="checkbox" id="menu-btn" />
+           <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
+         </label>
+           <ul class="menu">
+             <li><a href='index.html'>Home</a></li>
+             <li><a href='images/Résumé.png'>Résumé</a></li>
+             <li><a href='#Contact'>Contact</a></li>
+           </ul>
+         </header>
+         <!---DESKTOP HEADER START------------------------------------------------------------------->
+        <div>
+         <header class="header">
+         <input class="menu-btn" type="checkbox" id="menu-btn" />
+         <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
+         <ul class="menu">
+           <li><a href='index.html'>Home</a></li>
+           <li><a href='images/Résumé.png'>Résumé</a></li>
+           <li><a href='#Contact'>Contact</a></li>
+         </ul>
+         </header>
+        </div>
     <!-- HERO SECTION ------------------------------------------------------------------------>
   <section class="hero-journey" id=Journey>
       <h1 class="my-journey-h1">My Journey to UX/UI Design</h1>
-      <img class="My-Journey-Image" src="images/MyJourneyImage.jpg" alt="My Journey Header Image"/>
+      <img class="Journey-Image" src="images/MyJourneyImage.jpg" alt=" "/>
+
     </section>
     <section class="paragraph-journey">
         <p class="p-1"><b class="bold">I always found the joy of drawing, and had the privilege to go to Disney World. </b>I loved going to the artist and design buildings at Disney and watching the artist build and create new artwork. I was watching this one artist draw Mickey Mouse on the main street of the magic kingdom. He looked up at me and asked ” would you like to learn how to draw Mickey Mouse”? With excitement I said “yes”. He let me sit in his art studio and step by step taught me how to draw Mickey Mouse. This moment made me realize I wanted to do something in the world of art, but what. </p>
@@ -113,38 +57,26 @@
         <p class="p-1"><b class="bold">I ended up managing our local Radio Shack.</b>When I first started at Radio Shack we were a Verizon Dealer also. So Verizon taught me to fine tune my problem solving skills, search for a solution and perform great customer service. To this day I still get my old customers messaging me on social media asking me questions about there phones. We eventually stopped selling Verizon and switched to a Radio Shack and Printing Store. With my background of Photoshop and Lightroom I became the head designer for the store. I would design logos and business supplies for local businesses. I loved the fact that I could be creative again. This was great but still not the impact of design I wanted to portray on the world. One day I noticed our venders websites were very hard to navigate through. This triggered my path to UX/UI Design.</p>
   </section>
   <!--- LET'S TALK LINK FOOTER SECTION -------------------------------------------------------->
-    <section class="footer" id=Contact>
+    <div class="footer">
     <footer class="lets-talk-links" id="Contact">
         <h1>Let's Talk</h1>
   <!--- EMAIL LINK ---------------------------------------------------------------------------->
-  <ul class="footer__link-list">
-    <li>
         <a class="email-link" href="mailto:flynns_shutters@hotmail.com" target="_blank"> flynns_shutters@hotmail.com</a>
-    </li>
+        <ul class="footer__link-list">
   <!--- LINKEDIN LINK-------------------------------------------------------------------------->
-          <li>
-        <a class="linkedin-link" href="{https://www.linkedin.com/in/emily-heyrman-a6504417b/" target="_blank">
-          <i class="fa fa-linkedin-square" aria-hidden="true"></i>
-        </a>
-      </li>
+          <li class="icon">
+        <a class="linkedin-link" href="https://www.linkedin.com/in/emily-heyrman-a6504417b" target="_blank">
+          <i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
   <!--- GITHUB LINK --------------------------------------------------------------------------->
-      <li>
-        <a class="github-link" href="{https://github.com/EmilyHeyrman" target="_blank">
-          <i class="fa fa-github-square" aria-hidden="true"></i>
-        </a>
-      </li>
+        <a class="github-link" href="https://github.com/EmilyHeyrman" target="_blank">
+          <i class="fa fa-github-square" aria-hidden="true"></i></a>
   <!--- FACEBOOK LINK ------------------------------------------------------------------------->
-      <li>
         <a class="facebook-link" href="https://www.facebook.com/emily.flynn.31?ref=bookmarks" target="_blank">
-          <i class="fa fa-facebook-square" aria-hidden="true"></i>
-        </a>
-      </li>
-  <!--- TWITTER LINK -------------------------------------------------------------------------->
-      <li>
-         <a class="twittier-link" href="{https://twitter.com/HeyrmanEmily" target="_blank">
-           <i class="fa fa-twitter-square" aria-hidden="true"></i>
-        </a>
-    </li>
+          <i class="fa fa-facebook-square" aria-hidden="true"></i></a>
+        <!--- TWITTER LINK -------------------------------------------------------------------------->
+         <a class="twittier-link" href="https://twitter.com/HeyrmanEmily" target="_blank">
+           <i class="fa fa-twitter-square" aria-hidden="true"></i></a>
+        </li>
       </ul>
    </footer>
   </section>
